--- a/homework3-1/electronic-app-form-servlet/web/WEB-INF/web.xml
+++ b/homework3-1/electronic-app-form-servlet/web/WEB-INF/web.xml
@@ -5,7 +5,7 @@
          version="4.0">
     <servlet>
         <servlet-name>MyServlet</servlet-name>
-        <servlet-class>main.servlets.MyServlet</servlet-class>
+        <servlet-class>com.stormnet.task31.servlet.MyServlet</servlet-class>
     </servlet>
 
     <servlet-mapping>
